--- a/BLE_Sending_Receiving/Sending_Receiving.ioc
+++ b/BLE_Sending_Receiving/Sending_Receiving.ioc
@@ -59,9 +59,9 @@ Mcu.UserConstants=
 Mcu.UserName=STM32WB15CCUx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
-NUCLEO-WB15CC.BUTTON=1
-NUCLEO-WB15CC.BUTTON2=1
-NUCLEO-WB15CC.BUTTON3=1
+NUCLEO-WB15CC.BUTTON=2
+NUCLEO-WB15CC.BUTTON2=2
+NUCLEO-WB15CC.BUTTON3=2
 NUCLEO-WB15CC.IPParameters=LD2,VCP,LD3,BUTTON,BUTTON3,BUTTON2,LD1
 NUCLEO-WB15CC.LD1=true
 NUCLEO-WB15CC.LD2=true
@@ -160,7 +160,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_IPCC_Init-IPCC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-APPE_Init-STM32_WPAN-false-HAL-false,0-MX_HSEM_Init-HSEM-false-HAL-true,0-MX_RF_Init-RF-false-HAL-true,false-0--NUCLEO-WB15CC-true-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_IPCC_Init-IPCC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-APPE_Init-STM32_WPAN-false-HAL-false,6-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_HSEM_Init-HSEM-false-HAL-true,0-MX_RF_Init-RF-false-HAL-true,false-0--NUCLEO-WB15CC-true-HAL-true
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
@@ -210,7 +210,7 @@ STM32_WPAN.CFG_LSCLK_LSE=0
 STM32_WPAN.CUSTOM_P2P_SERVER=Disabled
 STM32_WPAN.CUSTOM_TEMPLATE=Enabled
 STM32_WPAN.INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME=1
-STM32_WPAN.IPParameters=CUSTOM_P2P_SERVER,CUSTOM_TEMPLATE,INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH,NUMBER_OF_SERVICES,SERVICE1_LONG_NAME,SERVICE1_SHORT_NAME,SERVICE1_UUID_128_INPUT_TYPE,SERVICE1_CHAR1_LONG_NAME,SERVICE1_CHAR1_SHORT_NAME,SERVICE1_CHAR1_PROP_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_LSCLK_LSE,SERVICE1_CHAR1_VALUE_LENGTH
+STM32_WPAN.IPParameters=CUSTOM_P2P_SERVER,CUSTOM_TEMPLATE,INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH,NUMBER_OF_SERVICES,SERVICE1_LONG_NAME,SERVICE1_SHORT_NAME,SERVICE1_UUID_128_INPUT_TYPE,SERVICE1_CHAR1_LONG_NAME,SERVICE1_CHAR1_SHORT_NAME,SERVICE1_CHAR1_PROP_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_LSCLK_LSE,SERVICE1_CHAR1_VALUE_LENGTH,SERVICE1_NUMBER_OF_CHARACTERISTICS,SERVICE1_CHAR2_LONG_NAME,SERVICE1_CHAR2_SHORT_NAME,SERVICE1_CHAR2_UUID,SERVICE1_CHAR2_PROP_NOTIFY,SERVICE1_CHAR2_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_NOTIFICATION_COMPLETION
 STM32_WPAN.NUMBER_OF_SERVICES=1
 STM32_WPAN.SERVICE1_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE=GATT_NOTIFY_ATTRIBUTE_WRITE
 STM32_WPAN.SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP=\ 
@@ -219,7 +219,16 @@ STM32_WPAN.SERVICE1_CHAR1_LONG_NAME=myCharWrite
 STM32_WPAN.SERVICE1_CHAR1_PROP_WRITE=CHAR_PROP_WRITE
 STM32_WPAN.SERVICE1_CHAR1_SHORT_NAME=myCharWrite
 STM32_WPAN.SERVICE1_CHAR1_VALUE_LENGTH=76
+STM32_WPAN.SERVICE1_CHAR2_GATT_NOTIFY_ATTRIBUTE_WRITE=GATT_NOTIFY_ATTRIBUTE_WRITE
+STM32_WPAN.SERVICE1_CHAR2_GATT_NOTIFY_NOTIFICATION_COMPLETION=GATT_NOTIFY_NOTIFICATION_COMPLETION
+STM32_WPAN.SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP=GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP
+STM32_WPAN.SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP=GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP
+STM32_WPAN.SERVICE1_CHAR2_LONG_NAME=myCharNotify
+STM32_WPAN.SERVICE1_CHAR2_PROP_NOTIFY=CHAR_PROP_NOTIFY
+STM32_WPAN.SERVICE1_CHAR2_SHORT_NAME=myCharNotify
+STM32_WPAN.SERVICE1_CHAR2_UUID=10 00
 STM32_WPAN.SERVICE1_LONG_NAME=mySvc
+STM32_WPAN.SERVICE1_NUMBER_OF_CHARACTERISTICS=2
 STM32_WPAN.SERVICE1_SHORT_NAME=mySvc
 STM32_WPAN.SERVICE1_UUID_128_INPUT_TYPE=0
 USART1.IPParameters=VirtualMode-Asynchronous
