--- a/BLE_Sending_Receiving/Sending_Receiving.ioc
+++ b/BLE_Sending_Receiving/Sending_Receiving.ioc
@@ -216,7 +216,7 @@ STM32_WPAN.CFG_LSCLK_LSE=0
 STM32_WPAN.CUSTOM_P2P_SERVER=Disabled
 STM32_WPAN.CUSTOM_TEMPLATE=Enabled
 STM32_WPAN.INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME=1
-STM32_WPAN.IPParameters=CUSTOM_P2P_SERVER,CUSTOM_TEMPLATE,INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH,NUMBER_OF_SERVICES,SERVICE1_LONG_NAME,SERVICE1_SHORT_NAME,SERVICE1_UUID_128_INPUT_TYPE,SERVICE1_CHAR1_LONG_NAME,SERVICE1_CHAR1_SHORT_NAME,SERVICE1_CHAR1_PROP_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_LSCLK_LSE,SERVICE1_CHAR1_VALUE_LENGTH,SERVICE1_NUMBER_OF_CHARACTERISTICS,SERVICE1_CHAR2_LONG_NAME,SERVICE1_CHAR2_SHORT_NAME,SERVICE1_CHAR2_UUID,SERVICE1_CHAR2_PROP_NOTIFY,SERVICE1_CHAR2_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_NOTIFICATION_COMPLETION
+STM32_WPAN.IPParameters=CUSTOM_P2P_SERVER,CUSTOM_TEMPLATE,INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH,NUMBER_OF_SERVICES,SERVICE1_LONG_NAME,SERVICE1_SHORT_NAME,SERVICE1_UUID_128_INPUT_TYPE,SERVICE1_CHAR1_LONG_NAME,SERVICE1_CHAR1_SHORT_NAME,SERVICE1_CHAR1_PROP_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_LSCLK_LSE,SERVICE1_CHAR1_VALUE_LENGTH,SERVICE1_NUMBER_OF_CHARACTERISTICS,SERVICE1_CHAR2_LONG_NAME,SERVICE1_CHAR2_SHORT_NAME,SERVICE1_CHAR2_UUID,SERVICE1_CHAR2_PROP_NOTIFY,SERVICE1_CHAR2_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_NOTIFICATION_COMPLETION,SERVICE1_CHAR2_VALUE_LENGTH
 STM32_WPAN.NUMBER_OF_SERVICES=1
 STM32_WPAN.SERVICE1_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE=GATT_NOTIFY_ATTRIBUTE_WRITE
 STM32_WPAN.SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP=\ 
@@ -233,6 +233,7 @@ STM32_WPAN.SERVICE1_CHAR2_LONG_NAME=myCharNotify
 STM32_WPAN.SERVICE1_CHAR2_PROP_NOTIFY=CHAR_PROP_NOTIFY
 STM32_WPAN.SERVICE1_CHAR2_SHORT_NAME=myCharNotify
 STM32_WPAN.SERVICE1_CHAR2_UUID=10 00
+STM32_WPAN.SERVICE1_CHAR2_VALUE_LENGTH=20
 STM32_WPAN.SERVICE1_LONG_NAME=mySvc
 STM32_WPAN.SERVICE1_NUMBER_OF_CHARACTERISTICS=2
 STM32_WPAN.SERVICE1_SHORT_NAME=mySvc
